--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -1,4 +1,21 @@
 spring:
+    profiles:
+        active:
+            - local
+        group:
+            local:
+                - db-local
+                - local
+            dev:
+                - db-dev
+                - dev
+            prod:
+                - db-prod
+                - prod
+        include:
+                - db
+                - my-service
+                - site
     thymeleaf:
         prefix: classpath:/templates/
         suffix: .html
@@ -6,23 +23,3 @@ spring:
     output:
         ansi:
             enabled: always
-    datasource:
-        url: jdbc:mariadb://localhost:3306/test
-        driver-class-name: org.mariadb.jdbc.Driver
-        username: root
-        password: root
-    jpa:
-        open-in-view: false
-server:
-    port: 8030
-    servlet:
-        encoding:
-            charset: UTF-8
-    tomcat:
-        uri-encoding: UTF-8
-logging:
-    level:
-        root: info
-        boot:
-            exam:
-                demo: DEBUG
